# LLM

./: AGENTS.md  COST_POLICY.md  DECISIONS.md  EVALS.md  PLANS.md  README.md  ROADMAP.md  pyproject.toml
.agents/skills/agent-evaluation/: SKILL.md
.agents/skills/cost-control/: SKILL.md
.agents/skills/graph-construction/: SKILL.md
.agents/skills/literature-ingestion/: SKILL.md
.agents/skills/llm-extraction/: SKILL.md
.agents/skills/ontology-design/: SKILL.md
.agents/skills/project-planning/: SKILL.md
.agents/skills/senior-code-review/: SKILL.md
docs/: architecture.md  competency_questions.md  domain.md  evidence_contract.md  ontology.md
src/semantic_research_agent/: __init__.py
src/semantic_research_agent/agents/: __init__.py
src/semantic_research_agent/evaluation/: __init__.py
src/semantic_research_agent/extraction/: __init__.py
src/semantic_research_agent/graph/: __init__.py
src/semantic_research_agent/ingestion/: __init__.py
src/semantic_research_agent/retrieval/: __init__.py
tests/: test_import.py
